# no_code_fastapi

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 23093a25a828_add_pipeleinerun_and_taskrun.py  2478dc27b0e8_init.py  add first pipelines and tasks_.py
src/: database.py  main.py  models.py  rabbitmq.py  schemas.py  task_consumer.py
src/routers/: image.py
src/service/: crud.py  runner.py
src/service/tasks/: ai_model.py  preprocess.py
src/tasks/: ai_model.py  preprocess.py  save_to_db.py
