[tool.poetry]
name = "no-code-fastapi"
version = "0.1.0"
description = ""
authors = ["RuslanUsmanov <usmanovruslan322@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-multipart = "^0.0.9"
fastapi = "^0.110.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
uvicorn = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
